# proyecto-tel102-grupo3-hito3

./: AI_USAGE.md  README.md  milestone.md  projectboard.md
src/: CMakeLists.txt  juego.cpp  juego.h  mainwindow.cpp  mainwindow.h  pregunta.cpp  pregunta.h
